--- a/chat.html
+++ b/chat.html
@@ -1,3 +1,147 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<title>чат 🌍</title>
+
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
+<style>
+:root {
+  --color-bg-light: #f5f5f5;
+  --color-primary: #4CAF50;
+  --color-primary-hover: #45a049;
+}
+
+/* RESET */
+* { box-sizing: border-box; margin:0; padding:0; }
+html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
+
+/* HEADER */
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
+header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
+.emoji-head { width:32px; height:32px; }
+
+/* TOPBAR */
+#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
+#topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
+#topBar span { font-size:0.9em; flex-shrink:0; }
+
+/* MOBILE USERS HORIZONTAL */
+#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
+.userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
+.userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
+.userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
+
+/* ALERTA PISCANDO */
+.alert-dot {
+  position:absolute;
+  top:0;
+  right:0;
+  width:12px;
+  height:12px;
+  background:red;
+  border-radius:50%;
+  animation: blink 1s infinite;
+}
+@keyframes blink { 50% { opacity:0; } }
+
+/* MAIN */
+#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
+
+/* USER LIST (DESKTOP) */
+#userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
+.userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
+.userItem:hover { background:#e0f7e9; }
+.userItem img { width:28px; height:28px; border-radius:50%; }
+
+/* CHAT */
+#chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; }
+#chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
+.msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; }
+.userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
+.otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
+
+/* CHAT INPUT */
+#chatInput { display:flex; border-top:1px solid #ddd; background:white; padding:4px; }
+#chatInput input { flex:1; padding:10px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
+#chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 14px; margin-left:4px; border-radius:5px; cursor:pointer; }
+#chatInput button:hover { background:var(--color-primary-hover); }
+
+/* ADS */
+#adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
+
+/* FOOTER */
+footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
+
+/* MOBILE */
+@media(max-width:768px){
+  html, body { height:100%; overflow:visible; }
+  header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
+  #topBar { position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px; }
+  #mobileUserLine {
+    display:flex;
+    position:fixed;
+    top:90px; left:0; right:0;
+    padding:6px 4px;
+    background:#fafafa;
+    border-bottom:1px solid #ddd;
+    z-index:100;
+    overflow-x:auto;
+    white-space:nowrap;
+  }
+  #mainContent {
+    flex-direction:column;
+    margin-top:130px;
+    margin-bottom:100px;
+    height:auto;
+    overflow-y:auto;
+  }
+  #chatWindow { flex:1; overflow-y:auto; width:100%; padding-bottom:10px; }
+  #chatInput {
+    position:fixed; bottom:40px; left:0; right:0; padding:4px;
+    background:white; z-index:50; width:100%;
+  }
+  footer {
+    position:fixed; bottom:0; left:0; right:0; z-index:100; width:100%; height:40px;
+  }
+  #userList, #adSidebar { display:none; }
+}
+</style>
+</head>
+<body>
+<header>
+  <h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"></h1>
+</header>
+
+<div id="topBar">
+  <button id="backBtn" onclick="window.location.href='index.html'">⬅ Voltar</button>
+  <button id="loginBtn">Login com Google</button>
+  <button id="logoutBtn" style="display:none;">Logout</button>
+  <button id="generalBtn" style="display:none;">⬅ Bate-papo geral</button>
+  <span id="alertaLogin">⚠️ Faça login para enviar mensagens.</span>
+  <span id="onlineCount">👥 Usuários online: 0</span>
+</div>
+
+<div id="mobileUserLine"></div>
+
+<div id="mainContent">
+  <div id="userList"></div>
+  <div id="chatContainer">
+    <div id="chatWindow"></div>
+    <div id="chatInput">
+      <input type="text" id="msgInput" placeholder="Digite sua mensagem..." disabled>
+      <button id="sendBtn" disabled>Enviar</button>
+    </div>
+  </div>
+  <div id="adSidebar">Publicidade aqui (Adsense)</div>
+</div>
+
+<footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
+
 <script>
 const firebaseConfig = {
   apiKey: "AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
@@ -10,166 +154,158 @@ const firebaseConfig = {
 };
 firebase.initializeApp(firebaseConfig);
 
-const auth = firebase.auth();
-const db = firebase.database();
-const loginBtn = document.getElementById("loginBtn");
-const logoutBtn = document.getElementById("logoutBtn");
-const msgInput = document.getElementById("msgInput");
-const sendBtn = document.getElementById("sendBtn");
-const chatWindow = document.getElementById("chatWindow");
-const userList = document.getElementById("userList");
-const alertaLogin = document.getElementById("alertaLogin");
-const onlineCount = document.getElementById("onlineCount");
-const generalBtn = document.getElementById("generalBtn");
-const mobileUserLine = document.getElementById("mobileUserLine");
-let currentChat = "global";
-let privateChatListener = null;
+const auth=firebase.auth();
+const db=firebase.database();
+const loginBtn=document.getElementById("loginBtn");
+const logoutBtn=document.getElementById("logoutBtn");
+const msgInput=document.getElementById("msgInput");
+const sendBtn=document.getElementById("sendBtn");
+const chatWindow=document.getElementById("chatWindow");
+const userList=document.getElementById("userList");
+const alertaLogin=document.getElementById("alertaLogin");
+const onlineCount=document.getElementById("onlineCount");
+const generalBtn=document.getElementById("generalBtn");
+const mobileUserLine=document.getElementById("mobileUserLine");
 
-// LOGIN/LOGOUT
-loginBtn.onclick = () => auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
-logoutBtn.onclick = () => auth.signOut();
+let currentChat="global";
+let privateChatListener=null;
+let alertIcons={};
 
-auth.onAuthStateChanged(user => {
-  if (user) {
-    loginBtn.style.display = "none";
-    logoutBtn.style.display = "inline-block";
-    alertaLogin.style.display = "none";
-    msgInput.disabled = false;
-    sendBtn.disabled = false;
-    db.ref("online/" + user.uid).set({ name: user.displayName, photo: user.photoURL });
-    db.ref("online/" + user.uid).onDisconnect().remove();
+loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
+logoutBtn.onclick=()=>auth.signOut();
+
+auth.onAuthStateChanged(user=>{
+  if(user){
+    loginBtn.style.display="none";
+    logoutBtn.style.display="inline-block";
+    alertaLogin.style.display="none";
+    msgInput.disabled=false;
+    sendBtn.disabled=false;
+    db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
+    db.ref("online/"+user.uid).onDisconnect().remove();
   } else {
-    loginBtn.style.display = "inline-block";
-    logoutBtn.style.display = "none";
-    alertaLogin.style.display = "inline-block";
-    msgInput.disabled = true;
-    sendBtn.disabled = true;
+    loginBtn.style.display="inline-block";
+    logoutBtn.style.display="none";
+    alertaLogin.style.display="inline-block";
+    msgInput.disabled=true;
+    sendBtn.disabled=true;
   }
 });
 
-// LISTA DE USUÁRIOS ONLINE
-db.ref("online").on("value", snap => {
-  const users = snap.val() || {};
-  onlineCount.textContent = `👥 Usuários online: ${Object.keys(users).length}`;
-  userList.innerHTML = "";
-  mobileUserLine.innerHTML = "";
+db.ref("online").on("value",snap=>{
+  const users=snap.val()||{};
+  onlineCount.textContent=`👥 Usuários online: ${Object.keys(users).length}`;
+  userList.innerHTML="";
+  mobileUserLine.innerHTML="";
 
-  for (const [uid, u] of Object.entries(users)) {
-    if (!u.name) continue;
+  for(const [uid,u] of Object.entries(users)){
+    if(!u.name) continue;
+    const div=document.createElement("div");
+    div.className="userItem";
+    div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
+    div.onclick=()=>requestPrivateChat(uid,u.name);
+    userList.appendChild(div);
 
-    // Desktop
-    const userDiv = document.createElement("div");
-    userDiv.className = "userItem";
-    userDiv.innerHTML = `<img src="${u.photo || 'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
-    userDiv.onclick = () => requestPrivateChat(uid, u.name);
-    userList.appendChild(userDiv);
-
-    // Mobile
-    const userMob = document.createElement("div");
-    userMob.className = "userItemMobile";
-    userMob.innerHTML = `<img src="${u.photo || 'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
-    userMob.onclick = () => requestPrivateChat(uid, u.name);
-    mobileUserLine.appendChild(userMob);
+    const mob=document.createElement("div");
+    mob.className="userItemMobile";
+    mob.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
+    mob.onclick=()=>requestPrivateChat(uid,u.name);
+    mobileUserLine.appendChild(mob);
+    alertIcons[uid]={desktop:div,mobile:mob};
   }
-
   startMobileScroll();
 });
 
-// ENVIAR MENSAGEM
-sendBtn.onclick = sendMessage;
-msgInput.addEventListener("keypress", e => {
-  if (e.key === "Enter") sendMessage();
-});
-
-function sendMessage() {
-  const text = msgInput.value.trim();
-  const user = auth.currentUser;
-  if (!text || !user) return;
-
-  const path = currentChat === "global" ? "chatGlobal" : "private/" + currentChat;
-  db.ref(path).push({
-    user: user.displayName,
-    uid: user.uid,
-    photo: user.photoURL,
-    text,
-    timestamp: Date.now()
-  });
-  msgInput.value = "";
+sendBtn.onclick=sendMessage;
+msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
+function sendMessage(){
+  const text=msgInput.value.trim();
+  const user=auth.currentUser;
+  if(!text||!user)return;
+  const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
+  db.ref(path).push({user:user.displayName,uid:user.uid,text,timestamp:Date.now()});
+  msgInput.value="";
 }
 
-// EXIBIR MENSAGENS
-function showMessage(msg, room) {
-  if (room !== "chatGlobal" && room !== currentChat) return;
-  const div = document.createElement("div");
-  div.className = msg.uid === auth.currentUser?.uid ? "msg userMsg" : "msg otherMsg";
-  div.textContent = `${msg.user}: ${msg.text}`;
+function showMessage(msg,room){
+  if(room!=="chatGlobal"&&room!==currentChat)return;
+  const div=document.createElement("div");
+  div.className=msg.uid===auth.currentUser?.uid?"msg userMsg":"msg otherMsg";
+  div.textContent=`${msg.user}: ${msg.text}`;
   chatWindow.appendChild(div);
-  chatWindow.scrollTop = chatWindow.scrollHeight;
+  chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// CHAT GERAL
-db.ref("chatGlobal").on("child_added", snap => showMessage(snap.val(), "chatGlobal"));
+db.ref("chatGlobal").on("child_added",snap=>showMessage(snap.val(),"chatGlobal"));
 
-// SOLICITAR CHAT PRIVADO
-function requestPrivateChat(uid, name) {
-  if (!auth.currentUser) return alert("Faça login para conversar.");
-  if (uid === auth.currentUser.uid) return;
-
-  const reqPath = `privateRequests/${uid}`;
-  db.ref(reqPath).push({
-    from: auth.currentUser.uid,
-    fromName: auth.currentUser.displayName
-  });
-  alert(`Solicitação de conversa enviada para ${name}.`);
+function requestPrivateChat(uid,name){
+  if(!auth.currentUser)return alert("Faça login para conversar.");
+  if(uid===auth.currentUser.uid)return;
+  const reqPath=`privateRequests/${uid}`;
+  db.ref(reqPath).push({from:auth.currentUser.uid,fromName:auth.currentUser.displayName});
+  alert(`Solicitação enviada para ${name}.`);
 }
 
-// RECEBER SOLICITAÇÕES
-auth.onAuthStateChanged(user => {
-  if (!user) return;
-  const reqPath = `privateRequests/${user.uid}`;
-  db.ref(reqPath).on("child_added", snap => {
-    const data = snap.val();
-    const fromUID = data.from;
-    const fromName = data.fromName;
+auth.onAuthStateChanged(user=>{
+  if(!user)return;
+  const reqPath=`privateRequests/${user.uid}`;
+  db.ref(reqPath).on("child_added",snap=>{
+    const data=snap.val();
+    const fromUID=data.from;
+    const fromName=data.fromName;
 
-    if (confirm(`${fromName} quer conversar com você em privado. Aceitar?`)) {
-      const chatId = [user.uid, fromUID].sort().join("_");
-      startPrivateChat(chatId, fromName);
+    // notificação visual discreta
+    const icon=alertIcons[fromUID];
+    if(icon){
+      const dot=document.createElement("div");
+      dot.className="alert-dot";
+      icon.desktop.appendChild(dot);
+      icon.mobile.appendChild(dot.cloneNode());
+    }
+
+    if(confirm(`${fromName} quer conversar com você. Aceitar?`)){
+      const chatId=[user.uid,fromUID].sort().join("_");
+      startPrivateChat(chatId,fromName);
     }
     snap.ref.remove();
   });
 });
 
-// INICIAR CHAT PRIVADO
-function startPrivateChat(chatId, partnerName) {
-  currentChat = chatId;
-  chatWindow.innerHTML = `<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${partnerName}</div>`;
-  generalBtn.style.display = "inline-block";
+function startPrivateChat(chatId,partnerName){
+  currentChat=chatId;
+  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${partnerName}</div>`;
+  generalBtn.style.display="inline-block";
 
-  if (privateChatListener) privateChatListener.off();
-  privateChatListener = db.ref("private/" + chatId);
-  privateChatListener.on("child_added", s => showMessage(s.val(), chatId));
+  if(privateChatListener)privateChatListener.off();
+  privateChatListener=db.ref("private/"+chatId);
+  privateChatListener.on("child_added",s=>showMessage(s.val(),chatId));
+
+  // remover alerta visual
+  for(const icons of Object.values(alertIcons)){
+    icons.desktop.querySelector(".alert-dot")?.remove();
+    icons.mobile.querySelector(".alert-dot")?.remove();
+  }
 }
 
-// VOLTAR AO GERAL
-generalBtn.onclick = () => {
-  currentChat = "global";
-  chatWindow.innerHTML = "";
-  db.ref("chatGlobal").once("value", s => s.forEach(m => showMessage(m.val(), "chatGlobal")));
-  generalBtn.style.display = "none";
+generalBtn.onclick=()=>{
+  currentChat="global";
+  chatWindow.innerHTML="";
+  db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
+  generalBtn.style.display="none";
 };
 
-// SCROLL INFINITO MOBILE
 let scrollInterval;
-function startMobileScroll() {
+function startMobileScroll(){
   clearInterval(scrollInterval);
-  const container = mobileUserLine;
-  if (!container) return;
-  scrollInterval = setInterval(() => {
-    container.scrollLeft += 1;
-    if (container.scrollLeft >= container.scrollWidth - container.clientWidth) {
-      container.scrollLeft = 0;
+  const container=mobileUserLine;
+  if(!container)return;
+  scrollInterval=setInterval(()=>{
+    container.scrollLeft+=1;
+    if(container.scrollLeft>=container.scrollWidth-container.clientWidth){
+      container.scrollLeft=0;
     }
-  }, 20);
+  },20);
 }
 </script>
+</body>
+</html>
